<resources>
    <string name="app_name">taskmaster</string>
    <string name="my_tasks">My Tasks</string>
    <string name="add_task">Add Task</string>
    <string name="all_tasks">All Tasks</string>
    <string name="task_body">Task body</string>
    <string name="task_title">Task title</string>
    <string name="submitted">Submitted!</string>
    <string name="add_task_title">Add task title</string>
    <string name="add_task_body">Add task body</string>
    <string name="save">Save</string>
    <string name="enter_your_new_username">Enter your new username</string>
    <string name="random_text">Hadeel work hard to pass .</string>
    <string name="plans_design">design</string>
    <string name="elevations">elevations</string>
    <string name="sections">sections</string>
    <string name="settings">Settings</string>
    <string name="textview">TextView</string>
    <string name="set_task_state">Set task state</string>
    <string name="pick_your_team">Update your team</string>
    <string name="teamname">TeamName</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_signup">SignUpActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in"> Sign in </string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up_now">Don\'t have an account? SIGN UP NOW !</string>
    <string name="username">Username</string>
    <string name="enter_the_verification_code">Enter the verification code</string>
    <string name="logout">Logout</string>
    <string name="add_image">Add Image</string>
    <string name="translate">translate</string>

</resources>